--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -10,18 +10,24 @@
 <div class="container my-2">
     <h2>Product' List</h2>
     <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
+<!--    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Delete Product</a>-->
 
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <tr>
             <th scope="col">Product Name</th>
             <th scope="col">Quantity</th>
+            <th scope="col">Product Operation</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="product: ${products}">
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
+            <td>
+                <a th:href="@{/product/delete/{id}(id=${product.productId})}" class="btn btn-outline-danger"> Delete </a>
+                <a class="btn btn-outline-info"> Edit </a>
+            </td>
         </tr>
         </tbody>
     </table>
