--- a/src/main/resources/templates/EditProduct.html
+++ b/src/main/resources/templates/EditProduct.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Product List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edit Product</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="container my-2">
-    <h2>Product' List</h2>
-    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
-    <!--    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Delete Product</a>-->
+<div class="container">
+    <h3>Edit Product</h3>
 
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
-        <tr>
-            <th scope="col">Product Name</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Product Operation</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="product: ${products}">
-            <td th:text="${product.productName}"></td>
-            <td th:text="${product.productQuantity}"></td>
-            <td>
-                <a th:href="@{/product/delete/{id}(id=${product.productId})}" class="btn btn-outline-danger"> Delete </a>
-                <a th:href="@{/product/edit/{id}(id=${product.productId})}" class="btn btn-outline-info"> Edit </a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <form th:action="@{/product/edit}" th:object="${product}" method="post">
+        <div class="form-group">
+            <label for="nameInput">Name</label>
+            <input type="text" class="form-control mb-4 col-4" id="nameInput" name="nameInput" placeholder="Enter product name" th:field="*{productName}">
+        </div>
+        <div class="form-group">
+            <label for="quantityInput">Quantity</label>
+            <input type="text" class="form-control mb-4 col-4" id="quantityInput" name="quantityInput" placeholder="Enter product quantity" th:field="*{productQuantity}">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <input type="hidden" th:field="*{productId}"/>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
