--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>ADV Shop</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     <h3>Welcome</h3>
+        <a th:href="@{/product/list}" class="btn btn-outline-info mb-3">See your Product!</a>
 </body>
 </html>
