--- a/src/main/resources/templates/CarList.html
+++ b/src/main/resources/templates/CarList.html
@@ -17,6 +17,9 @@
             <th scope="col">Car Name</th>
             <th scope="col">Quantity</th>
             <th scope="col">Color</th>
+            <th scope="col">Edit Operation</th>
+            <th scope ="col">Delete Operation</th>
+
         </tr>
         </thead>
         <tbody>
@@ -29,10 +32,16 @@
             </td>
             <td>
                 <form th:action="@{/car/deleteCar}" method="post" >
-                    <input type="hidden" th:name="carId" th:value="${car.carId}" />
-                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                </form>
+                <input type="hidden" th:name="carId" th:value="${car.carId}" />
+                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+            </form>
             </td>
+<!--            <td>-->
+<!--                <form th:action="@{/car/deleteCar}" method="post" >-->
+<!--                    <input type="hidden" th:name="carId" th:value="${car.carId}" />-->
+<!--                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>-->
+<!--                </form>-->
+<!--            </td>-->
         </tr>
 
         </tbody>
